[package]
name = "zk_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#futures = "0.3.5"
#zksync = { git = "https://github.com/matter-labs/zksync", version = "0.3.0" }
web3 = "0.17.0"
#tokio = { version = "0.2.2", features = ["full"] }
#tokio = { version = "1.0", optional = true, features = ["full"] }
tokio = "1.10.0"
